# regex-set

./: .gitignore  .npmignore  .oxfmtrc.json  .oxlintrc.json  .provenance.yml  CONTRIBUTING.md  Cargo.toml  HANDOVER.md  README.md  SECURITY.md  THIRD-PARTY-NOTICES.txt  bunfig.toml  deny.toml  index.cjs  index.d.ts  index.js  lib.d.ts  lib.js  lib.mjs  lib.wasm.js  llms.txt  package-lock.json  package.json  regex-set-wasm32-wasi.d.ts  regex-set.wasi-browser.d.ts  regex-set.wasi-browser.js  regex-set.wasi.cjs  rustfmt.toml  sbom.cdx.json  tsconfig.json  tsdown.config.ts  wasi-worker.mjs
.github/: dependabot.yml
.github/actions/provenance-check/: action.yml
.github/workflows/: ci.yml  cla.yml  provenance-nightly.yml  provenance-sync.yml  provenance-trial.yml  release.yml  rust-napi-ci.local.yml  sbom.yml
__bench__/: download-corpus.sh  fancy-fallback.ts  speed.ts
__test__/: index.spec.ts  properties.spec.ts  vite.spec.ts
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: package.json
npm/wasm32-wasi/: README.md  package.json
npm/win32-x64-msvc/: package.json
provenance/: THIRD-PARTY-NOTICES.repo.txt  THIRD-PARTY-NOTICES.txt  report.json  sbom.cdx.json
scripts/: build-native.mjs  check-wasm-compat.mjs  ensure-wasm-artifact.mjs  fix-napi-loader.mjs  runtime-smoke.mjs  setup-repo.sh  version-sync.mjs
src/: core.ts  index.ts  lib.rs  lib.ts  vite.ts  wasm-fetch-guard.ts  wasm.ts
wasm/: package.json
(+3 files in other folders)
