[package]
name = "stella-regex-set"
version = "0.3.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
fancy-regex = "0.14"
regex = "1"
regex-automata = { version = "0.4", features = [
  "meta",
  "nfa",
  "dfa",
  "hybrid",
] }
regex-syntax = "0.8"
napi = { version = "3", default-features = false, features = [
  "napi9",
  "serde-json",
] }
napi-derive = "3"
unicode-segmentation = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
codegen-units = 1
